Translate of website

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1 id="mainNombre">Fabio Squizzato</h1>
-      <p><span class="typed" data-typed-items="Developer, Fix de bugs, Lógica, Web Design,Web App developer, Frameworks, Librerías, BackEnd, Base de datos, Libreries, Database, Logic"></span></p>
+      <p><span class="typed" data-typed-items="Developer, Fix de bugs, Lógica, Web Design,Web App developer, Frameworks, Librerías, BackEnd, Base de datos, Libraries, Database, Logic"></span></p>
       <div class="social-links">
         <a href="https://facebook.com/fabio21" target=”_blank” ><img class="imgTecnologias" src="./assets/img/icons/icons8-facebook-48.png" alt="" srcset=""></a>
         <a href="https://instagram.com/fabios15" target=”_blank” class="instagram"><img class="imgTecnologias" src="./assets/img/icons/icons8-instagram-48.png" alt="" srcset=""></a>
@@ -117,7 +117,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong class="lang" key="AGE"></strong> <span>32</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong class="lang" key="DEGREE"></strong> <span>Bioingeniero</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong class="lang" key="DEGREE"></strong> <span class="lang" key="BIOENGINEER"></span></li>
                 </ul>
               </div>
             </div>
@@ -135,8 +135,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Hitos</h2>
-          <p>Algunos números sobre logros alcanzados</p>
+          <h2 class="lang" key="MILESTONES"></h2>
+          <p class="lang" key="MILESTONES-DESCRIPTION"></p>
         </div>
 
         <div class="row">
@@ -145,7 +145,7 @@
             <div class="count-box">
               <i class="bi bi-journals"></i>
               <span data-purecounter-start="0" data-purecounter-end="20" data-purecounter-duration="4" class="purecounter"></span>
-              <p>Cursos y certificados</p>
+              <p class="lang" key="COURSES"></p>
             </div>
           </div>
 
@@ -153,7 +153,7 @@
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
               <span data-purecounter-start="0" data-purecounter-end="7" data-purecounter-duration="4" class="purecounter"></span>
-              <p>Proyectos profesionales</p>
+              <p class="lang" key="PROJECTS"></p>
             </div>
           </div>
 
@@ -161,7 +161,7 @@
             <div class="count-box">
               <i class="bi bi-alarm"></i>
               <span data-purecounter-start="0" data-purecounter-end="4000" data-purecounter-duration="4" class="purecounter"></span>
-              <p>Horas de programación</p>
+              <p class="lang" key="PROGRAMMING-HOURS"></p>
             </div>
           </div>
 
@@ -169,7 +169,7 @@
             <div class="count-box">
               <i class="bi bi-hourglass-split"></i>
               <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="4" class="purecounter"></span>
-              <p>Años en el desarrollo web</p>
+              <p class="lang" key="PROGRAMMING-YEARS"></p>
             </div>
           </div>
 
@@ -177,7 +177,7 @@
             <div class="count-box">
               <i class="bi bi-award"></i>
               <span data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="4" class="purecounter"></span>
-              <p>Premios y reconocimientos conseguidos</p>
+              <p class="lang" key="AWARDS"></p>
             </div>
           </div>
 
@@ -190,7 +190,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Conocimientos técnicos</h2>
+          <h2 class="lang" key="KNOWLEDGES"></h2>
         </div>
 
         <div class="row">
@@ -198,20 +198,20 @@
             <div class="resume-item pb-0">
               <h4>Backend</h4>
               <ul>
-                <li>Patrón de diseño modelo vista controlador</li>
-                <li>Serverless y arquitectura monolítica</li>
-                <li>Frameworks y librerías</li>
-                <li>Modelado y creación de <em>Application Programming Interfaces (API)</em></li>
-                <li>Manipulación de sesiones</li>
-                <li>Control de usuarios con <em>JSON Web Tokens(JWT)</em></li>
-                <li>Consumo de APIs</li>
-                <li>Uso de <em>Structured Query Language(SQL)</em></li>
-                <li>Base de datos</li>
-                <li>Autorización y autenticación</li>
-                <li>Encriptación, cifrado y <em>hasheado</em> de datos</li>
-                <li>Base de datos relacionales y no relacionales</li>
+                <li class="lang" key="MVC"></li>
+                <li class="lang" key="ARQ-TYPE"></li>
+                <li class="lang" key="FRAMEWORKS-LIBRARIES"></li>
+                <li class="lang" key="API-CREATION">Modelado y creación de <em>Application Programming Interfaces (API)</em></li>
+                <li class="lang" key="SESSION-MANIPULATION">Manipulación de sesiones</li>
+                <li class="lang" key="USER-CONTROL">Control de usuarios con <em>JSON Web Tokens(JWT)</em></li>
+                <li class="lang" key="API-CONSUMO">Consumo de APIs</li>
+                <li class="lang" key="SQL">Uso de <em>Structured Query Language(SQL)</em></li>
+                <li class="lang" key="DATABASE">Base de datos</li>
+                <li class="lang" key="AUTHORIZATION-AND-AUTENTICATION">Autorización y autenticación</li>
+                <li class="lang" key="ENCRIPTATION">Encriptation, cifrado y <em>hasheado</em> de datos</li>
+                <li class="lang" key="DATABASE-RELATIONAL-NO-RELATIONAL">Base de datos relacionales y no relacionales</li>
               </ul>
-              <h5>Tecnologías</h5>
+              <h5 class="lang" key="technologies">Tecnologías</h5>
               <ul>
                 <li class="li-hover">NodeJS<img class="imgTecnologias" src="./assets/img/icons/icons8-nodejs.png" alt="">
                   <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" >
