--- a/index.html
+++ b/index.html
@@ -201,68 +201,68 @@
                 <li class="lang" key="MVC"></li>
                 <li class="lang" key="ARQ-TYPE"></li>
                 <li class="lang" key="FRAMEWORKS-LIBRARIES"></li>
-                <li class="lang" key="API-CREATION">Modelado y creación de <em>Application Programming Interfaces (API)</em></li>
-                <li class="lang" key="SESSION-MANIPULATION">Manipulación de sesiones</li>
-                <li class="lang" key="USER-CONTROL">Control de usuarios con <em>JSON Web Tokens(JWT)</em></li>
-                <li class="lang" key="API-CONSUMO">Consumo de APIs</li>
-                <li class="lang" key="SQL">Uso de <em>Structured Query Language(SQL)</em></li>
-                <li class="lang" key="DATABASE">Base de datos</li>
-                <li class="lang" key="AUTHORIZATION-AND-AUTENTICATION">Autorización y autenticación</li>
-                <li class="lang" key="ENCRIPTATION">Encriptation, cifrado y <em>hasheado</em> de datos</li>
-                <li class="lang" key="DATABASE-RELATIONAL-NO-RELATIONAL">Base de datos relacionales y no relacionales</li>
+                <li class="lang" key="API-CREATION"></li>
+                <li class="lang" key="SESSION-MANIPULATION"></li>
+                <li class="lang" key="USER-CONTROL"></li>
+                <li class="lang" key="API-CONSUMO"></li>
+                <li class="lang" key="SQL"></li>
+                <li class="lang" key="DATABASE"></li>
+                <li class="lang" key="AUTHORIZATION-AND-AUTENTICATION"></li>
+                <li class="lang" key="ENCRIPTATION"></li>
+                <li class="lang" key="DATABASE-RELATIONAL-NO-RELATIONAL"></li>
               </ul>
-              <h5 class="lang" key="technologies">Tecnologías</h5>
+              <h5 class="lang" key="TECHNOLOGIES"></h5>
               <ul>
                 <li class="li-hover">NodeJS<img class="imgTecnologias" src="./assets/img/icons/icons8-nodejs.png" alt="">
                   <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" >
-                    <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
+                    <div class="progress-bar bg-success lang" key="PROFESSIONAL-USE" style="width: 100%"></div>
                   </div>
                 </li>
                 <li>Php<img class="imgTecnologias" src="./assets/img/icons/icons8-php-40.png" alt="">
                   <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" >
-                    <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
+                    <div class="progress-bar bg-success lang" key="PROFESSIONAL-USE" style="width: 100%"></div>
                   </div>
                 </li>
                 <li>Codeigniter<img class="imgTecnologias" src="./assets/img/icons/icons8-codeigniter.png" alt="">
                   <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" >
-                    <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
+                    <div class="progress-bar bg-success lang" key="PROFESSIONAL-USE" style="width: 100%"></div>
                   </div>
                 </li>
                 </li>
                 <li>ExpressJS<img class="imgTecnologias" src="./assets/img/icons/icons8-express-js-40.png" alt="">
                   <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" >
-                    <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
+                    <div class="progress-bar bg-success lang" key="PROFESSIONAL-USE" style="width: 100%"></div>
                   </div>
                 </li>
                 <li>Postman<img class="imgTecnologias" src="./assets/img/icons/icons8-postman-api-64.png" alt="">
                   <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" >
-                    <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
+                    <div class="progress-bar bg-success lang" key="PROFESSIONAL-USE" style="width: 100%"></div>
                   </div>
                 </li>
                 </li>
                 <li>Funciones lambda AWS<img class="imgTecnologias" src="./assets/img/icons/icons8-amazon-web-services-48.png" alt="">
                   <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" >
-                    <div class="progress-bar bg-primary" style="width: 30%">En aprendizaje</div>
+                    <div class="progress-bar bg-primary" style="width: 30%"></div>
                   </div>
                 </li>
                 <li>Funciones en Vercel (NextJS)<img class="imgTecnologias" src="./assets/img/icons/vercel.svg" alt="">
                   <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" >
-                    <div class="progress-bar bg-primary" style="width: 30%">En aprendizaje</div>
+                    <div class="progress-bar bg-primary" style="width: 30%"></div>
                   </div>
                 </li>
                 <li>Base de datos MySql<img class="imgTecnologias" src="./assets/img/icons/icons8-mysql-48.png" alt="">
                                     <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" >
-                    <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
+                    <div class="progress-bar bg-success lang"  key="PROFESSIONAL-USE" style="width: 100%"></div>
                   </div>
                 </li>
                 <li>Base de datos PostgresSQL<img class="imgTecnologias" src="./assets/img/icons/icons8-postgresql-48.png" alt="">
                                     <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" >
-                    <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
+                    <div class="progress-bar bg-success lang" key="PROFESSIONAL-USE" style="width: 100%"></div>
                   </div>
                 </li>
                 <li>Base de datos Mongo<img class="imgTecnologias" src="./assets/img/icons/icons8-mongodb.png" alt="">
                                     <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" >
-                    <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
+                    <div class="progress-bar bg-success lang" key="PROFESSIONAL-USE" style="width: 100%"></div>
                   </div>
                 </li>
               </ul>
