--- a/index.html
+++ b/index.html
@@ -240,27 +240,27 @@
                   </div>
                 </li>
                 </li>
-                <li>Funciones lambda AWS<img class="imgTecnologias" src="./assets/img/icons/icons8-amazon-web-services-48.png" alt="">
+                <li>Funciones Lambda AWS<img class="imgTecnologias" src="./assets/img/icons/icons8-amazon-web-services-48.png" alt="">
                   <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" >
-                    <div class="progress-bar bg-primary" style="width: 30%"></div>
+                    <div class="progress-bar bg-primary lang" key="APRENDIZAJE"  style="width: 30%"></div>
                   </div>
                 </li>
-                <li>Funciones en Vercel (NextJS)<img class="imgTecnologias" src="./assets/img/icons/vercel.svg" alt="">
+                <li>Funciones Vercel (NextJS)<img class="imgTecnologias" src="./assets/img/icons/vercel.svg" alt="">
                   <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" >
-                    <div class="progress-bar bg-primary" style="width: 30%"></div>
+                    <div class="progress-bar bg-primary lang" key="APRENDIZAJE" style="width: 30%"></div>
                   </div>
                 </li>
-                <li>Base de datos MySql<img class="imgTecnologias" src="./assets/img/icons/icons8-mysql-48.png" alt="">
+                <li>MySql DB<img class="imgTecnologias" src="./assets/img/icons/icons8-mysql-48.png" alt="">
                                     <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" >
                     <div class="progress-bar bg-success lang"  key="PROFESSIONAL-USE" style="width: 100%"></div>
                   </div>
                 </li>
-                <li>Base de datos PostgresSQL<img class="imgTecnologias" src="./assets/img/icons/icons8-postgresql-48.png" alt="">
+                <li>PostgresSQL DB<img class="imgTecnologias" src="./assets/img/icons/icons8-postgresql-48.png" alt="">
                                     <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" >
                     <div class="progress-bar bg-success lang" key="PROFESSIONAL-USE" style="width: 100%"></div>
                   </div>
                 </li>
-                <li>Base de datos Mongo<img class="imgTecnologias" src="./assets/img/icons/icons8-mongodb.png" alt="">
+                <li>Mongo DB<img class="imgTecnologias" src="./assets/img/icons/icons8-mongodb.png" alt="">
                                     <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" >
                     <div class="progress-bar bg-success lang" key="PROFESSIONAL-USE" style="width: 100%"></div>
                   </div>
@@ -273,45 +273,45 @@
             <div class="resume-item">
               <h4>Frontend</h4>
               <ul>
-                <li><em>Server Side Rendering(SSR)</em> y <em>Client Side Rendering(CSR)</em></li>
-                <li>Frameworks y librerías</li>
-                <li>Interpretación de funcionamiento de un navegador: sitios estáticos vs dinámicos</li>
-                <li>Conocimiento de significado de <em>Asynchronous Javascript and XML</em> y su funcionamiento</li>
-                <li><em>Single Page Application(SPA)</em></li>
-                <li>Herramientas de desarrollo de los navegadores: uso de pestañas de consola, red, elementos, estilos, aplicación</li>
-                <li>Estilos</li>
-                <li>Conocimiento y manipulación de <em>Document Object Model(DOM)</em> y DOM virtual</li>
+                <li class="lang" key="SSR-CSR"></li>
+                <li class="lang" key="FRAMEWORKS-LIBRARIES"></li>
+                <li class="lang" key="SITE-TYPE"></li>
+                <li class="lang" key="AJAX"></li>
+                <li class="lang" key="SPA"></li>
+                <li class="lang" key="TOOLS-BROWSER"></li>
+                <li class="lang" key="STYLES"></li>
+                <li class="lang" key="DOM"></li>
               </ul>
-              <h5>Tecnologías</h5>
+              <h5 class="lang" key="TECHNOLOGIES"></h5>
               <ul>
-                <li>HTML,CSS y JS<img class="imgTecnologias" src="./assets/img/icons/icons8-html-5-48.png" alt="">
+                <li>HTML-CSS-JS<img class="imgTecnologias" src="./assets/img/icons/icons8-html-5-48.png" alt="">
                   <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" >
-                    <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
+                    <div class="progress-bar bg-success lang" key="PROFESSIONAL-USE" style="width: 100%" ></div>
                   </div>
                 </li>
                 <li>Jquery<img class="imgTecnologias" src="./assets/img/icons/icons8-jquery.png" alt="">
                   <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" >
-                    <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
+                    <div class="progress-bar bg-success lang" key="PROFESSIONAL-USE" style="width: 100%"></div>
                   </div>
                 </li>
                 <li>Bootstrap<img class="imgTecnologias" src="./assets/img/icons/icons8-bootstrap-48.png" alt="">
                   <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" >
-                    <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
+                    <div class="progress-bar bg-success lang" key="PROFESSIONAL-USE" style="width: 100%"></div>
                   </div>
                 </li>
                 <li>Axios<img class="imgTecnologias" src="./assets/img/icons/axios.svg" alt="">
                   <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100" >
-                    <div class="progress-bar bg-warning" style="width: 66%">Intermedio</div>
+                    <div class="progress-bar bg-warning lang" key="INTERMEDIO" style="width: 66%"></div>
                   </div>
                 </li>
                 <li>React<img class="imgTecnologias" src="./assets/img/icons/icons8-react-80.png" alt="">
                   <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" >
-                    <div class="progress-bar bg-primary" style="width: 30%">En aprendizaje</div>
+                    <div class="progress-bar bg-primary lang" key="LEARNING" style="width: 30%">En aprendizaje</div>
                   </div>
                 </li>
                 <li>Vue<img class="imgTecnologias" src="./assets/img/icons/icons8-vuejs-48.png" alt="">
                   <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100" >
-                    <div class="progress-bar bg-warning" style="width: 66%">Intermedio</div>
+                    <div class="progress-bar bg-warning lang" key="INTERMEDIO" style="width: 66%"></div>
                   </div>
                 </li>
               </ul>
@@ -319,22 +319,23 @@
           </div>
           <div class="col-lg-4">
             <div class="resume-item">
-              <h4>Computación e informática</h4>
+              <h4 class="lang" key="COMPUTATION"></h4>
               <ul>
-                <li>Comprensión de funcionamiento de los sistemas operativos</li>
-                <li>Asignación de puertos</li>
-                <li>Funcionamiento de servicios</li>
+                <li class="lang" key="OS"></li>
+                <li class="lang" key="PORT-ASSIGNATION"></li>
+                <li class="lang" key="SERVICES"></li>
+                <li class="lang" key="LAN-INTERNET"></li>
               </ul>
-              <h5>Tecnologías</h5>
+              <h5 class="lang" key="TECHNOLOGIES"></h5>
               <ul>
                 <li>Windows<img class="imgTecnologias" src="./assets/img/icons/icons8-windows-48.png" alt="">
                   <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" >
-                    <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
+                    <div class="progress-bar bg-success lang" key="PROFESSIONAL-USE" style="width: 100%"></div>
                   </div>
                 </li>
                 <li>Git<img class="imgTecnologias" src="./assets/img/icons/icons8-git-48.png" alt="">
                   <div class="progress" role="progressbar" aria-label="Basic Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" >
-                    <div class="progress-bar bg-success" style="width: 100%">Uso profesional</div>
+                    <div class="progress-bar bg-success lang" key="PROFESSIONAL-USE" style="width: 100%"></div>
                   </div>
                 </li>
               </ul>
