Agregado de migrations

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1 id="mainNombre">Fabio Squizzato</h1>
-      <p><span class="typed" data-typed-items="Developer, Fix de bugs, Lógica, Web Design,Web App developer, Frameworks, Librerías, BackEnd, Base de datos, Libraries, Database, Logic"></span></p>
+      <p><span class="typed" data-typed-items="Developer, Fix de bugs, Migraciones, Lógica, Web Design,Web App developer, Frameworks, Librerías, BackEnd, Base de datos, Libraries, Database, Logic, Migration"></span></p>
       <div class="social-links">
         <a href="https://facebook.com/fabio21" target=”_blank” ><img class="imgTecnologias" src="./assets/img/icons/icons8-facebook-48.png" alt="" srcset=""></a>
         <a href="https://instagram.com/fabios15" target=”_blank” class="instagram"><img class="imgTecnologias" src="./assets/img/icons/icons8-instagram-48.png" alt="" srcset=""></a>
@@ -210,6 +210,7 @@
                 <li class="lang" key="AUTHORIZATION-AND-AUTENTICATION"></li>
                 <li class="lang" key="ENCRIPTATION"></li>
                 <li class="lang" key="DATABASE-RELATIONAL-NO-RELATIONAL"></li>
+                <li class="lang" key="MIGRATION"></li>
               </ul>
               <h5 class="lang" key="TECHNOLOGIES"></h5>
               <ul>
