Language first professional experience

--- a/index.html
+++ b/index.html
@@ -354,46 +354,45 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Curriculum Vitae</h2>
+          <h2 class="lang" key="RESUME"></h2>
         </div>
 
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="resume-title">Resumen</h3>
+            <h3 class="resume-title" class="lang" key="SUMMARY"></h3>
             <div class="resume-item pb-0">
               <h4>Fabio Squizzato</h4>
-              <p><em>Software developer con dos años de experiencia. Tareas full-stack aunque presento mayor interés por el back-end. </em></p>
+              <p><em class="lang" key="SHORT-DESCRIPTION">Software developer con dos años de experiencia. Tareas full-stack aunque presento mayor interés por el back-end. </em></p>
               <ul>
                 <li>Godoy Cruz, Mendoza, Argentina</li>
-                <li>(+54) 261-6071225</li>
                 <li>squizzato.fabio@gmail.com</li>
               </ul>
             </div>
 
-            <h3 class="resume-title">Educación</h3>
+            <h3 class="resume-title lang" key="EDUCATION"></h3>
             <div class="resume-item">
-              <h4>Bioingeniería</h4>
+              <h4 class="lang" key="BIOENGINEER"></h4>
               <h5>2009 - 2018</h5>
               <p><em>Universidad de Mendoza, Mendoza, Argentina</em></p>
-              <p>Carrera de grado. Excelente desempeño en materias matemáticas e informáticas. Promedio académico: 8.14/10</p>
+              <p class="lang" key="TITLE-DESCRIPTION"></p>
             </div>
             
           </div>
           <div class="col-lg-6">
-            <h3 class="resume-title">Experiencia profesional</h3>
+            <h3 class="resume-title lang" key="PROFESSIONAL-EXPERIENCE"></h3>
             <div class="resume-item">
               <h4>Jr Web developer</h4>
-              <h5>2021 - Presente</h5>
+              <h5>2021 - <span class="lang" key="CURRENT"></span></h5>
               <p><em>Visual Medica, Mendoza, Argentina </em></p>
               <ul>
-                <li>Web developer en empresa orientada a tecnología en imagen médica</li>
-                <li>Tareas de desarrollo y mantenimiento </li>
-                <li>Nuevos desarrollos, fix de bugs, permanente participación en nuevos desarrollos aportando ideas</li>
-                <li>Sistemas principales desarrollados en Codeigniter 3 y Jquery usando PostgreSQL</li>
-                <li>Actualización a Codeigniter 4 de algunos sistemas</li>
-                <li>Nuevo desarrollo actual realizando en NodeJS con ExpressJS usando MongoDB </li>
-                <li>Comunicación entre los sistemas</li>
-                <li>Tecnologías usadas: <img src="./assets/img/icons/icons8-php-40.png" alt=""><img src="./assets/img/icons/icons8-nodejs.png" alt=""><img src="./assets/img/icons/icons8-codeigniter.png" alt=""><img class="imgTecnologias" src="./assets/img/icons/icons8-express-js-40.png" alt=""><img src="./assets/img/icons/icons8-jquery.png" alt=""><img src="./assets/img/icons/icons8-mongodb.png" alt=""><img src="./assets/img/icons/icons8-postgresql-48.png" alt=""></li>
+                <li class="lang" key="VISUAL-DESCRIPTION"></li>
+                <li class="lang" key="DESARROLLO"></li>
+                <li class="lang" key="NEW-DESARROLLO"></li>
+                <li class="lang" key="MAIN-SYSTEMS"></li>
+                <li class="lang" key="CODE4"></li>
+                <li class="lang" key="VISUAL-SOCIAL"></li>
+                <li class="lang" key="SYSTEM-COMUNICATION"></li>
+                <li> <span class="lang" key="USED-TECHNOLOGIES"></span> <img src="./assets/img/icons/icons8-php-40.png" alt=""><img src="./assets/img/icons/icons8-nodejs.png" alt=""><img src="./assets/img/icons/icons8-codeigniter.png" alt=""><img class="imgTecnologias" src="./assets/img/icons/icons8-express-js-40.png" alt=""><img src="./assets/img/icons/icons8-jquery.png" alt=""><img src="./assets/img/icons/icons8-mongodb.png" alt=""><img src="./assets/img/icons/icons8-postgresql-48.png" alt=""></li>
               </ul>
             </div>
             <div class="resume-item">
