--- a/index.html
+++ b/index.html
@@ -396,14 +396,14 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Asistente técnico en servicios de Neurocirugía</h4>
+              <h4 class="lang" key="MEDICOR-JOB"></h4>
               <h5>2019 - 2021</h5>
               <p><em>Medicor SA, Mendoza, Argentina</em></p>
               <ul>
-                <li>Realizado de aplicación tipo calendario para controlar cirugías de la empresa usando <em>Php, MySql, Bootstrap</em><img src="./assets/img/icons/icons8-php-40.png" alt=""><img src="./assets/img/icons/icons8-mysql-48.png" alt=""><img src="./assets/img/icons/icons8-bootstrap-48.png" alt=""></li>
-                <li>Prestación de servicios y materiales en neurocirugías</li>
-                <li>Planificación de neuronavegación, abordaje y utilización durante la cirugía</li>
-                <li>Asistencia a cirugía prestando aspirador ultrasónico, craneótomo y materiales de cierre</li>
+                <li><span class="lang" key="WEB-CALENDAR"></span><img src="./assets/img/icons/icons8-php-40.png" alt=""><img src="./assets/img/icons/icons8-mysql-48.png" alt=""><img src="./assets/img/icons/icons8-bootstrap-48.png" alt=""></li>
+                <li class="lang" key="MATERIALES-MEDICOR"></li>
+                <li class="lang" key="SURGERY-PLAN"></li>
+                <li class="lang" key="SURGERY-ASSISTANCE"></li>
               </ul>
             </div>
           </div>
@@ -417,13 +417,11 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Portfolio</h2>
-          <p>Algunos proyectos que he desarrollado, ya sea como finalizaciones de cursos, propuestas laborales, entorno profesional o entretenimiento</p>
+          <h2 class="lang" key="PORTFOLIO"></h2>
+          <p class="lang" key="PORTFOLIO-DESCRIPTION"></p>
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
-
-
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/java.png" class="img-fluid" alt="">
@@ -580,8 +578,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Cursos</h2>
-          <p>Capacitaciones extras que han servido para la actualización continua</p>
+          <h2 class="lang" key="COURSES"></h2>
+          <p class="lang" key="COURSES-DESCRIPTION"></p>
         </div>
 
                <div class="container" data-aos="fade-up">
