Translate portfolio functions

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
             <h3 class="resume-title" class="lang" key="SUMMARY"></h3>
             <div class="resume-item pb-0">
               <h4>Fabio Squizzato</h4>
-              <p><em class="lang" key="SHORT-DESCRIPTION">Software developer con dos años de experiencia. Tareas full-stack aunque presento mayor interés por el back-end. </em></p>
+              <p><em class="lang" key="SHORT-DESCRIPTION"></em></p>
               <ul>
                 <li>Godoy Cruz, Mendoza, Argentina</li>
                 <li>squizzato.fabio@gmail.com</li>
@@ -426,7 +426,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/java.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Simulador Cajero automático</h4>
+                <h4 class="lang" key="ATM"></h4>
                 <p><img src="./assets/img/icons/icons8-java-48.png"/></p>
                 <div class="portfolio-links">
                   <a href="simulador-cajero.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
@@ -439,7 +439,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/php.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>WebApp tipo calendario para llevar cirugías</h4>
+                <h4 class="lang" key="WEB-SURGERIES"></h4>
                 <p><img src="./assets/img/icons/icons8-php-40.png"/><img src="./assets/img/icons/icons8-mysql-48.png"/><img src="./assets/img/icons/icons8-bootstrap-48.png"/></p>
                 <div class="portfolio-links">
                   <a href="web-app-calendario.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
@@ -453,7 +453,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/nodejs.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App para conocer el clima</h4>
+                <h4 class="lang" key="WHEATHER-APP"></h4>
                 <p><img src="./assets/img/icons/icons8-nodejs.png"/><img src="./assets/img/icons/icons8-vuejs-48.png"/></p>
                 <div class="portfolio-links">
                   <a href="app-weather.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
@@ -466,7 +466,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/nodejs.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Modelo REST server</h4>
+                <h4 class="lang" key="REST-SERVER-MODEL"></h4>
                 <p><img src="./assets/img/icons/icons8-nodejs.png"/><img src="./assets/img/icons/icons8-mongodb.png"/></p>
                 <div class="portfolio-links">
                   <a href="rest-server-model.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
@@ -479,7 +479,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/vuejs.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Pequeña PWA</h4>
+                <h4 class="lang" key="PWA"></h4>
                 <p><img src="./assets/img/icons/icons8-vuejs-48.png"/></p>
                 <div class="portfolio-links">
                   <a href="iss-pwa.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
@@ -492,7 +492,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/nodejs.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Posteo de comentarios</h4>
+                <h4 class="lang" key="COMMENTARIES"></h4>
                 <p><img src="./assets/img/icons/icons8-nodejs.png"/><img src="./assets/img/icons/icons8-mongodb.png"/><img src="./assets/img/icons/icons8-vuejs-48.png"/></p>
                 <div class="portfolio-links">
                   <a href="posteo-comentarios.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
@@ -505,7 +505,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/vuejs.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Simulación Boleta Única Mendoza</h4>
+                <h4 class="lang" key="BOLETA-UNICA-SIMULATOR"></h4>
                 <p><img src="./assets/img/icons/icons8-vuejs-48.png"/></p>
                 <div class="portfolio-links">
                   <a href="boleta-unica.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
@@ -518,7 +518,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/php.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Simulador Torneo de fútbol</h4>
+                <h4 class="lang" key="FOOTBALL-SIMULATOR"></h4>
                 <p><img src="./assets/img/icons/icons8-php-40.png"/><img src="./assets/img/icons/icons8-mysql-48.png"/><img src="./assets/img/icons/icons8-bootstrap-48.png"/></p>
                 <div class="portfolio-links">
                   <a href="torneo-futbol.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
@@ -531,7 +531,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/matlab.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Computer Aided Diagnoses for mammographies</h4>
+                <h4 class="lang" key="COMPUTER-AIDED-DIAGNOSES"></h4>
                 <p><img src="./assets/img/icons/icons8-matlab-48.png"/></p>
                 <div class="portfolio-links">
                   <a href="computer-aided-diagnoses.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
@@ -543,7 +543,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/matlab.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App que permite calcular la Transformada de Fourier</h4>
+                <h4 class="lang" key="FFT"></h4>
                 <p><img src="./assets/img/icons/icons8-matlab-48.png"/></p>
                 <div class="portfolio-links">
                   <a href="fourier-transform.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
@@ -556,7 +556,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/github.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Desarrollos y soluciones a <em>bugs</em></h4>
+                <h4 class="lang" key="BUGS-SOLUTIONS"></h4>
                 <p><img src="./assets/img/icons/icons8-github-50.png"/></p>
                 <div class="portfolio-links">
                   <a href="soluciones.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
