--- a/index.html
+++ b/index.html
@@ -591,8 +591,8 @@
                   <div class="icon">
                     <img src="./assets/img/icons/icons8-java-48.png"/>
                   </div>
-                  <h4><a href="">Java Intermedio Oracle Sun</a></h4>
-                  <p><em>Academias UTN Mendoza</em></p>
+                  <h4 class="lang" key="JAVA-ORACLE"></h4>
+                  <p><em class="lang" key="ACADEMIAS-UTN"></em></p>
                   <p><a href="http://academiasutnmza.com/java-intermedio/"><i class="bi bi-link"></i></a></p>
                 </div>
               </div>
@@ -603,7 +603,7 @@
                 <div class="icon">
                   <img src="./assets/img/icons/icons8-nodejs.png"/>
                 </div>
-                <h4><a href="">Node: De cero a experto (Edición 2021)</a></h4>
+                <h4 class="lang" key="NODE-CERO"></h4>
                 <p><em>Udemy</em></p>
                 <p>Fernando Herrera</p>
                 <p><a href="https://www.udemy.com/course/node-de-cero-a-experto/"><i class="bi bi-link"></i></a></p>
@@ -615,7 +615,7 @@
                 <div class="icon">
                   <img src="./assets/img/icons/icons8-nodejs.png"/>
                 </div>
-                <h4><a href="">Aprende Javascript ES9, HTML, CSS3 y NodeJS desde cero</a></h4>
+                <h4 class="lang" key="JS-ES6"></h4>
                 <p><em>Udemy</em></p>
                 <p>Nicolás Schurmann</p>
                 <p><a href="https://www.udemy.com/course/aprende-javascript-es9-html-css3-y-nodejs-desde-cero/"><i class="bi bi-link"></i></a></p>
@@ -628,7 +628,7 @@
               <div class="icon">
                 <img src="./assets/img/icons/icons8-javascript-48.png"/>
               </div>
-              <h4><a href="">Javascript: de cero hasta los detalles (ES5)</a></h4>
+              <h4 class="lang" key="JS-CERO"></h4>
               <p><em>Udemy</em></p>
               <p>Fernando Herrera</p>
               <p><a href="https://www.udemy.com/course/javascript-de-cero-hasta-los-detalles/"><i class="bi bi-link"></i></a></p>
@@ -640,7 +640,7 @@
               <div class="icon">
                 <img src="./assets/img/icons/icons8-php-40.png"/>
               </div>
-              <h4><a href="">Curso Php/MySql</a></h4>
+              <h4 class="lang" key="PHP-MYSQL"></h4>
               <p><em>Píldoras informáticas</em></p>
               <p><a href="https://www.youtube.com/watch?v=I75CUdSJifw&list=PLU8oAlHdN5BkinrODGXToK9oPAlnJxmW_"><i class="bi bi-link"></i></a></p>
             </div>
@@ -651,7 +651,7 @@
               <div class="icon">
                 <img src="./assets/img/icons/icons8-python-48.png"/>
               </div>
-              <h4><a href="">Curso Python desde 0.</a></h4>
+              <h4 class="lang" key="PYTHON-CERO"></h4>
               <p><em>Píldoras informáticas</em></p>
               <p><a href="https://www.youtube.com/watch?v=G2FCfQj-9ig&list=PLU8oAlHdN5BlvPxziopYZRd55pdqFwkeS"><i class="bi bi-link"></i></a></p>
             </div>
