--- a/index.html
+++ b/index.html
@@ -664,8 +664,7 @@
 
     <section id="idiomas" class="services resume">
       <div class="section-title">
-          <h2>Idiomas</h2>
-          <p>Lenguajes hablados, no informáticos si no de los que se hablan</p>
+          <h2 class="lang" key="SPOKEN-LANGUAGES"></h2>
         </div>
         <div class="container" data-aos="fade-up">
   
@@ -676,8 +675,8 @@
                   <div class="icon">
                     <img src="./assets/img/spain.png"/>
                   </div>
-                  <h4><a href="">Español</a></h4>
-                  <p><em>Nativo</em></p>
+                  <h4><span class="lang" key="SPANISH"></span></h4>
+                  <p><em class="lang" key="NATIVE"></em></p>
                 </div>
               </div>
 
@@ -687,18 +686,18 @@
                 <div class="icon">
                   <img src="./assets/img/united-kingdom.png"/>
                 </div>
-                <h4><a href="">Inglés</a></h4>
-                <p><em>Nivel B2</em></p>
-                <div>Cursos</div>
+                <h4><span class="lang" key="ENGLISH"></span></h4>
+                <p><em class="lang" key="B2-LEVEL"></em></p>
+                <div class="lang" key="COURSES"></div>
                 <div class="resume-item">Argentina Programa 4.0<a href="./assets/pdf/certificado_argentina_programa_ingles.pdf" target=”_blank”><i class="bi bi-file-pdf"></i></a>
-                    <li class="detail-il"><small>Centro Universitario de Idiomas</small></li>
-                    <li class="detail-il">Nivel 8 B1.2</li>
-                    <li class="detail-il">Enero - Marzo 2023</li>
+                    <li class="detail-il">Centro Universitario de Idiomas</li>
+                    <li class="detail-il" class="lang" key="CUI-LEVEL"></li>
+                    <li class="detail-il" class="lang" key="FROM-TO-CUI"></li>
                   </div>
                   <div class="resume-item">English for work <a href="https://credentials.englishonline.britishcouncil.org/profile/eu-fabiolucianosquizzato973691/wallet" target=”_blank”><i class="bi bi-person-lines-fill"></i></a>
                     <li class="detail-il">British Council</li>
                     <li class="detail-il">Level B2</li>
-                    <li class="detail-il">Mayo - Agosto 2023</li>
+                    <li class="detail-il" class="lang" key="FROM-TO-COUNCIL"></li>
                   </div>
                   <div class="resume-item">Duolingo <a href="https://www.duolingo.com/profile/squizzato.fabio" target=”_blank”><i class="bi bi-person-lines-fill"></i></a></div>              
               </div>
@@ -714,8 +713,7 @@
           <section id="habilidades" class="services">
 
         <div class="section-title">
-          <h2>Habilidades</h2>
-          <p>Principales propiedades en el desarrollo profesional</p>
+          <h2 class="lang" key="SKILLS"></h2>
         </div>
 
         <div class="row">
@@ -728,8 +726,8 @@
                 </svg>
                 <i class="bi bi-plug"></i>
               </div>
-              <h4><a href="">Adaptación</a></h4>
-              <p>Capacidad para afrontar de manera positiva cambios</p>
+              <h4><span class="lang" key="ADAPTATION"></span></h4>
+              <p class="lang" key="ADAPTATION-DESCRIPTION"></p>
             </div>
           </div>
 
@@ -741,8 +739,8 @@
                 </svg>
                 <i class="bi bi-journal"></i>
               </div>
-              <h4><a href="">Aprendizaje</a></h4>
-              <p>Continuo interés por mantener los conocimientos al día buscando las últimas tecnologías usadas</p>
+              <h4><span class="lang" key="LEARNING"></span></h4>
+              <p class="lang" key="LEARNING-DESCRIPTION"></p>
             </div>
           </div>
 
@@ -754,8 +752,8 @@
                 </svg>
                 <i class="bi bi-person-fill"></i>
               </div>
-              <h4><a href="">Trabajo individual</a></h4>
-              <p>Habilidad para afrontar tareas de manera individual</p>
+              <h4><span class="lang" key="SELF-WORKER"></span></h4>
+              <p class="lang" key="SELF-WORKER-DESCRIPTION"></p>
             </div>
           </div>
 
@@ -767,8 +765,8 @@
                 </svg>
                 <i class="bi bi-people-fill"></i>
               </div>
-              <h4><a href="">Trabajo en grupos multidisciplinarios</a></h4>
-              <p>Habilidad para realizar tareas de manera conjunta con un equipo, diferenciando tareas y estipulando tiempos para alcanzar una meta conjunta</p>
+              <h4><span class="lang" key="MULTI-GROUPS"></span></h4>
+              <p class="lang" key="MULTI-GROUPS-DESCRIPTION"></p>
             </div>
           </div>
 
@@ -780,8 +778,8 @@
                 </svg>
                 <i class="bi bi-signpost-split-fill"></i>
               </div>
-              <h4><a href="">Versionados</a></h4>
-              <p>Interpretación y manejo apropiado de versiones, liberados y hot fixs</p>
+              <h4><span class="lang" key="VERSIONS"></span></h4>
+              <p class="lang" key="VERSIONS-DESCRIPTION"></p>
             </div>
           </div>
 
@@ -793,8 +791,8 @@
                 </svg>
                 <i class="bi bi-clock-history"></i>
               </div>
-              <h4><a href="">Estimaciones temporales</a></h4>
-              <p>Buena habilidad para calcular de manera apropiada los tiempos de tareas</p>
+              <h4><span class="lang" key="TEMPORAL-ESTIMATION"></span></h4>
+              <p class="lang" key="TEMPORAL-ESTIMATION-DESCRIPTION"></p>
             </div>
           </div>
 
